# neuro-evolution-simulation

./: CMakeLists.txt  README.md  visualize.py
build_native/: CMakeCache.txt  Makefile  cmake_install.cmake  index  shell.html
build_native/lib/piksel/: Makefile  cmake_install.cmake
build_native/lib/piksel/lib/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
build_native/lib/piksel/lib/glfw/src/: Makefile  cmake_install.cmake
data/: simulation_data.json
src/: app.cpp  app.hpp  being.cpp  brain.cpp  config.cpp  config.json  food.cpp  main.cpp  organism.cpp  utils.cpp  vector.cpp
src/headers/: brain.hpp  config.hpp  food.hpp  foodType.hpp  utils.hpp  vector.hpp
